[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/UI/AnimatedButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://resources/theme.tres" type="Theme" id=2]
[ext_resource path="res://Scenes/UI/OptionsMenu.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Utils/VolumeRangeController.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=1]
resource_name = "popup"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer/PanelContainer:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1.1, 1.1 ), Vector2( 0.9, 0.9 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MarginContainer/PanelContainer:rect_pivot_offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 112, 52 ) ]
}

[node name="OptionsMenu" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="Popup_animation" type="AnimationPlayer" parent="."]
autoplay = "popup"
anims/popup = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_right = 1.0
mouse_filter = 2
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
margin_left = 48.0
margin_top = 4.0
margin_right = 272.0
margin_bottom = 175.0
rect_pivot_offset = Vector2( 68, 61 )
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
margin_right = 224.0
margin_bottom = 171.0
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 212.0
margin_bottom = 159.0
rect_min_size = Vector2( 200, 0 )
custom_constants/separation = 12
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 9.0
text = "OPTIONS"
align = 1

[node name="WindoModeContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 21.0
margin_right = 200.0
margin_bottom = 45.0

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/WindoModeContainer"]
margin_left = 21.0
margin_top = 7.0
margin_right = 76.0
margin_bottom = 16.0
size_flags_horizontal = 6
text = "WINDOW MODE"

[node name="WinodowModeButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/WindoModeContainer" instance=ExtResource( 1 )]
margin_left = 103.0
margin_right = 199.0
size_flags_horizontal = 6
text = "Winodwed"

[node name="MusicVolumeContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 57.0
margin_right = 200.0
margin_bottom = 78.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/MusicVolumeContainer"]
margin_left = 19.0
margin_top = 6.0
margin_right = 78.0
margin_bottom = 15.0
size_flags_horizontal = 6
text = "MUSIC VOLUME"

[node name="VolumeRangeController" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/MusicVolumeContainer" instance=ExtResource( 4 )]
margin_left = 143.0
margin_right = 200.0

[node name="SFXVolumeContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 200.0
margin_bottom = 111.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/SFXVolumeContainer"]
margin_left = 41.0
margin_top = 6.0
margin_right = 56.0
margin_bottom = 15.0
size_flags_horizontal = 6
text = "SFX"

[node name="VolumeRangeController" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/SFXVolumeContainer" instance=ExtResource( 4 )]
margin_left = 143.0
margin_right = 200.0

[node name="BackButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_left = 52.0
margin_top = 123.0
margin_right = 148.0
margin_bottom = 147.0
size_flags_horizontal = 4
text = "BACK"
